deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-service
spec:
  selector:
    app: basic-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
